--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+atskafka (0.2) buster-wikimedia; urgency=medium
+
+  * Load rdkafka configuration from file
+
+ -- Emanuele Rocca <ema@wikimedia.org>  Tue, 17 Mar 2020 15:38:32 +0100
+
 atskafka (0.1) buster-wikimedia; urgency=medium
 
   * Initial release (T237993)
