atskafka: convert float64 configuration values to int
When unmarshaling into an interface value, json.Unmarshal uses float64
for numbers, while kafka.ConfigMap expects integers.

Bug: T237993
Change-Id: I59c69eee835c0640e3ab4e41f3877e00c5ecea61

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+atskafka (0.3) buster-wikimedia; urgency=medium
+
+  * Convert float64 values to int when loading rdkafka configuration
+
+ -- Emanuele Rocca <ema@wikimedia.org>  Tue, 17 Mar 2020 18:01:23 +0100
+
 atskafka (0.2) buster-wikimedia; urgency=medium
 
   * Load rdkafka configuration from file
