--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+atskafka (0.4) buster-wikimedia; urgency=medium
+
+  * Add sequence number
+
+ -- Emanuele Rocca <ema@wikimedia.org>  Wed, 18 Mar 2020 16:28:43 +0100
+
 atskafka (0.3) buster-wikimedia; urgency=medium
 
   * Convert float64 values to int when loading rdkafka configuration
