Do not append to stats file
Instead of appending to the stats file, overwrite it once every
statistics.interval.ms. There is no compelling reason to keep historical
data, and we avoid having to deal with logrotate.

Bug: T237993
Change-Id: I5a71f94fe2a59911e1a6ff03ac0e1e7b2a9c93aa

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 atskafka (0.4) buster-wikimedia; urgency=medium
 
   * Add sequence number
+  * Do not append to stats file
 
  -- Emanuele Rocca <ema@wikimedia.org>  Wed, 18 Mar 2020 16:28:43 +0100
 
