Reopen Unix socket upon read errors
In case of errors reading from the socket, atskafka should re-open it
instead of exiting with status 0 as if everything went fine.

Bug: T237993
Change-Id: Ic755f6b174b5e862c29102e21023508c553dd455

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+atskafka (0.5) buster-wikimedia; urgency=medium
+
+  * Reconnect to Unix socket in case of read errors
+
+ -- Emanuele Rocca <ema@wikimedia.org>  Mon, 23 Mar 2020 10:01:37 +0100
+
 atskafka (0.4) buster-wikimedia; urgency=medium
 
   * Add sequence number
