Add tests for atskafka.go
Change the signature of doWork to make it accept the KafkaProducer
interface instead of a kafka.Producer. The interface defines a Produce
menthod like the one provided by the confluent-kafka-go API:
https://docs.confluent.io/current/clients/confluent-kafka-go/index.html#Producer.Produce

By doing so we can test doWork by passing a mock producer.

Change-Id: Id759e30b84c975697c4550a313a20f148fce912e

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ atskafka (0.6) UNRELEASED; urgency=medium
 
   * json: avoid 'index out of range' panic on malformed fields:
     https://phabricator.wikimedia.org/P11114
+  * Add tests for atskafka.go
 
  -- Emanuele Rocca <ema@wikimedia.org>  Sat, 02 May 2020 12:51:05 +0200
 
