--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+atskafka (0.10) UNRELEASED; urgency=medium
+
+  * Add missing field: uri_query. (Bug: T254317)
+
+ -- Emanuele Rocca <ema@wikimedia.org>  Thu, 23 Jul 2020 16:01:18 +0200
+
 atskafka (0.9) buster-wikimedia; urgency=medium
 
   * Build against prometheus-rdkafka-exporter 0.2. (Bug: T253551)
