--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-atskafka (0.10) UNRELEASED; urgency=medium
+atskafka (0.10) buster-wikimedia; urgency=medium
 
   * Add missing field: uri_query. (Bug: T254317)
   * Move to dh-golang
   * go mod configuration
   * Use testify for testing
 
- -- Emanuele Rocca <ema@wikimedia.org>  Thu, 23 Jul 2020 16:01:18 +0200
+ -- Emanuele Rocca <ema@wikimedia.org>  Fri, 24 Jul 2020 11:25:27 +0200
 
 atskafka (0.9) buster-wikimedia; urgency=medium
 
